// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Components - test BoldText - snapshot 1`] = `
<Text
  style={
    {
      "color": "rgb(28, 28, 30)",
      "fontSize": 18,
      "fontWeight": "bold",
      "opacity": 0.87,
    }
  }
/>
`;

exports[`Component Components - test ErrorText - snapshot 1`] = `
<Text
  style={
    {
      "color": "rgb(0, 122, 255)",
    }
  }
/>
`;

exports[`Component Components - test FadeText - snapshot 1`] = `
<Text
  style={
    {
      "color": "rgb(28, 28, 30)",
      "opacity": 0.65,
    }
  }
/>
`;

exports[`Component Components - test RegText - snapshot 1`] = `
<Text
  onPress={[Function]}
  style={
    [
      {},
      {
        "color": "rgb(28, 28, 30)",
        "fontSize": 18,
        "fontWeight": "600",
        "opacity": 1,
      },
    ]
  }
/>
`;

exports[`Component Components - test UsdAmount - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "flexDirection": "row",
    }
  }
>
  <Text
    style={
      {
        "color": undefined,
        "fontSize": 20,
      }
    }
  >
    $
  </Text>
  <Text
    style={
      {
        "color": undefined,
        "fontSize": 20,
        "fontWeight": "700",
      }
    }
  >
     --
  </Text>
  <Text
    style={
      {
        "color": undefined,
        "fontSize": 20,
      }
    }
  >
     USD
  </Text>
</View>
`;

exports[`Component Components - test ZecAmount - snapshot 1`] = `
<View
  style={
    {
      "alignItems": "baseline",
      "flexDirection": "row",
    }
  }
>
  <Text
    style={
      {
        "color": undefined,
        "fontSize": 24,
      }
    }
  >
    ᙇ
  </Text>
  <Text
    style={
      {
        "color": undefined,
        "fontSize": 24,
        "fontWeight": "700",
      }
    }
  >
     0.0000
  </Text>
  <Text
    style={
      {
        "color": undefined,
        "fontSize": 12,
        "paddingBottom": 0,
      }
    }
  >
    0000
  </Text>
  <Text
    style={
      {
        "color": undefined,
        "fontSize": 24,
      }
    }
  >
     ZEC
  </Text>
</View>
`;

exports[`Component Components - test ZecPrice - snapshot 1`] = `
<Text
  style={
    {
      "color": "rgb(28, 28, 30)",
      "opacity": 0.65,
    }
  }
/>
`;
